namespace SchedulePlanning.Enums;

public enum VVNStatus
{
    inProgress,
    submitted,
    approved,
    rejected,
    withdrawn
}
